--- a/package.json
+++ b/package.json
@@ -5,8 +5,9 @@
   "main": "src/index.js",
   "type": "module",
   "scripts": {
-    "dev": "nodemon src/index.js",
-    "start": "node src/index.js",
+    "dev": "nodemon --exec tsx src/index.js",
+    "start": "tsx src/index.js",
+    "agentpad": "tsx bin/agentpad.js",
     "build": "echo 'No build step required for Node.js'",
     "test": "jest",
     "lint": "eslint src/",
@@ -16,9 +17,15 @@
     "db:reset": "npm run db:migrate && npm run db:seed"
   },
   "dependencies": {
+    "@langchain/core": "^0.3.66",
+    "@langchain/openai": "^0.6.3",
     "axios": "^1.6.0",
+    "commander": "^14.0.0",
     "dotenv": "^16.3.1",
     "express": "^4.18.2",
+    "langchain": "^0.3.30",
+    "tsx": "^4.20.3",
+    "viem": "^2.33.1",
     "winston": "^3.11.0"
   },
   "devDependencies": {
