--- a/env.example
+++ b/env.example
@@ -4,10 +4,12 @@ SEI_PRIVATE_KEY=your_private_key_here
 # OpenAI Configuration (for LLM nodes)
 OPENAI_API_KEY=your_openai_api_key_here
 
+# CoinGecko API Configuration (for price data)
+COINGECKO_DEMO_API_KEY=your_coingecko_api_key_here
+
 # Optional: Override RPC URLs
 SEI_MAINNET_RPC=https://evm-rpc.sei-apis.com
-SEI_TESTNET_RPC=https://evm-rpc-testnet.sei-apis.com
-SEI_DEVNET_RPC=https://evm-rpc-devnet.sei-apis.com
+SEI_TESTNET_RPC=https://testnet-sei-evm-rpc.seistream.app
 
 # Logging Configuration
 LOG_LEVEL=info 
