docs: update backend docs and remove deprecated files

--- a/env.example
+++ b/env.example
@@ -12,4 +12,11 @@ SEI_MAINNET_RPC=https://evm-rpc.sei-apis.com
 SEI_TESTNET_RPC=https://testnet-sei-evm-rpc.seistream.app
 
 # Logging Configuration
-LOG_LEVEL=info 
+LOG_LEVEL=info
+
+# Telegram Configuration (for notifications and approvals)
+TELEGRAM_BOT_TOKEN=your_telegram_bot_token_here
+TELEGRAM_CHAT_ID=your_telegram_chat_id_here
+
+# Optional: Custom webhook port (default: 3001)
+WEBHOOK_PORT=3001 
